# BSBase

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: build.yml
CMake/: Config.cmake.in  InstallProject.cmake  Platform.cmake
Inc/BSBase/: Base.h  Result.h  String.h  Type.h  Util.h
Scripts/: Build.sh  Setup.bat  Setup.sh
